/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-12-17
Edit WriteInit in classes convMxM and convMxN
クラスconvMxMとconvMxN内のWriteInitの部分において、不等間隔格子の
座標データが単精度の場合と倍精度の場合の両方に対応できるようにした。

------------------
2014-12-16
Edit classes InputParam, convMxM and convMxN to output non-uniform cartesian
 data in VTK format
FCONVを用いてVTK形式の不等間隔格子のデータを出力できるように、
クラスInputParam，convMxM，convMxNを編集した。

------------------
2014-12-16
Edit class cdm_DFI_VTK to output non-uniform cartesian data
VTK形式で不等間隔格子のデータが出力できるように、クラスcdm_DFI_VTKを編集した。
主に、メソッドwrite_HeaderRecordを編集した。
格子点への補間を行う場合と行わない場合の両方に対応し、補間を行わない
場合はガイドセルも出力できるようにした。

------------------
2014-12-13
Bug fix of function data for FortranBinary in class convOutput_PLOT3D
FCONVのM対1データ変換において、FortranBinary形式でplot3dデータの
フィールドデータを出力する際、出力するデータのバイト数の書き込み位置
(メソッドWriteDataMarkerの位置)を修正した。
また、出力する変数が３に固定されていた部分があったので修正した。

------------------
2014-12-12
Edit class convOutput_PLOT3D to output plot3d data for dual cells
FCONVのM対1データ変換において、plot3d形式のデータを格子点補間せずに
双対セルとして扱って出力するため、格子ファイル出力時の格子数を修正した。

------------------
2014-12-12
Comment out method WriteNgrid in plot3d format in FCONV
FCONVのM対1データ変換において、plot3d形式でデータ出力する際、シングルグリッドで
出力するため、グリッド数を記述するメソッドWriteNgridをコメントアウトした。

------------------
2014-12-11
Bug fix in method write_ascii_header of class cdm_DFI_BOV and correct typo
クラスcdm_DFI_BOVのメソッドwrite_ascii_header内の誤植
・DATA_COMPONENT >> DATA_COMPONENTS
・BRICK_ORIGN >> BRICK_ORIGIN
を修正した。Orign >> Originの誤植が他の所にもあったので訂正した。

------------------
2014-12-11
Minor modification in method WriteGridFile
メソッドWriteGridFile内のprint文に修正を加えた。

------------------
2014-12-11
Remove parameter OutputArrayShape from input file for FCONV
FCONVの入力ファイルから
・出力配列形状を指定するパラメータ:OutputArrayShape
を削除した。BOV形式の配列形状をijknで固定したため。

------------------
2014-12-11